# OnionEngine

./: CMakeLists.txt  README.md  ToDo.txt
apps/sandbox/: CMakeLists.txt  main.cpp
assets/shaders/: basic.frag  model.frag  model.vert  simple.frag  simple.vert  texture_triangle.vert
cmake/: FetchAssimp.cmake  FetchImGui.cmake  warnings.cmake
src/onion/: CMakeLists.txt  onion.hpp
src/onion/core/: Engine.cpp  Engine.hpp
src/onion/renderer/: opengl_helper.h  renderer.cpp  renderer.hpp
src/onion/renderer/asset_manager/: asset_manager.cpp  asset_manager.hpp
src/onion/renderer/camera/: camera.cpp  camera.hpp
src/onion/renderer/inputs_manager/: inputs.h  inputs_manager.cpp  inputs_manager.hpp
src/onion/renderer/material/: material.cpp  material.hpp
src/onion/renderer/mesh/: mesh.cpp  mesh.hpp
src/onion/renderer/model/: model.cpp  model.hpp
src/onion/renderer/shader/: shader.cpp  shader.hpp
src/onion/renderer/skybox/: skybox.cpp  skybox.hpp
src/onion/renderer/structs/: transform.hpp  vertex.hpp
src/onion/renderer/texture/: texture.cpp  texture.hpp  texture_manager.hpp
